[AV2-480] fixed chat name not showing issue. fixed issue messages not loading issue. fixed show chat room first load issue.

--- a/src/app/chat/chat-room/chat-room.component.scss
+++ b/src/app/chat/chat-room/chat-room.component.scss
@@ -163,18 +163,7 @@ $message-body-size: 224px;
 .footer {
 
   &.ion-footer-absolute {
-    height: 48px;
-    // ion-grid {
-    //   ion-row {
-    //     ion-col {
-    //       ion-button {
-    //         min-height: 48px;
-    //         max-height: 100px;
-    //         height: auto;
-    //       }
-    //     }
-    //   }
-    // }
+    height: auto;
   }
 
   ion-grid {
